--- a/package.json
+++ b/package.json
@@ -15,6 +15,13 @@
     "db:push": "npm run prisma db push",
     "lint": "./node_modules/.bin/eslint"
   },
+  "scripts_": {
+    "test": "npm run build:ts && tsc -p test/tsconfig.json && c8 node --test -r ts-node/register test/**/*.ts",
+    "start": "npm run build:ts && fastify start -l info dist/app.js",
+    "watch:ts": "tsc -w",
+    "dev": "npm run build:ts && concurrently -k -p \"[{name}]\" -n \"TypeScript,App\" -c \"yellow.bold,cyan.bold\" \"npm:watch:ts\" \"npm:dev:start\"",
+    "dev:start": "fastify start --ignore-watch=.ts$ -w -l info -P dist/app.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/hmake98/fastify-typescript.git"
@@ -26,6 +33,12 @@
     "url": "https://github.com/hmake98/fastify-typescript/issues"
   },
   "homepage": "https://github.com/hmake98/fastify-typescript#readme",
+  "dependencies_": {
+    "fastify-plugin": "^4.0.0",
+    "@fastify/autoload": "^5.0.0",
+    "@fastify/sensible": "^5.0.0",
+    "fastify-cli": "^6.1.1"
+  },
   "dependencies": {
     "@fastify/auth": "^4.6.1",
     "@fastify/autoload": "^5.8.2",
@@ -49,6 +62,12 @@
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
     "pino": "^9.1.0"
+  },
+  "devDependencies_": {
+    "c8": "^9.0.0",
+    "ts-node": "^10.4.0",
+    "concurrently": "^8.2.2",
+    "fastify-tsconfig": "^2.0.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
