--- a/package.json
+++ b/package.json
@@ -47,11 +47,13 @@
     "@fastify/helmet": "^11.1.1",
     "@fastify/jwt": "^8.0.1",
     "@fastify/multipart": "^8.2.0",
+    "@libsql/client": "^0.15.8",
     "@prisma/client": "^3.12.0",
     "aws-sdk": "^2.1623.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "dotenv-cli": "^7.4.2",
+    "drizzle-orm": "^0.44.2",
     "env-schema": "^5.2.1",
     "fastify": "^4.27.0",
     "fastify-cli": "^6.1.1",
